--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,46 @@
 .container {
-    display: flex;
+    /* padding: 0 10px; */
+    margin: 0 auto;
+    position: relative;
 }
 
+.wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.global-container {
+    margin: 0 auto;
+    text-align: center;
+    padding: 0 10px;
+}
+
+h3 {
+    font-size: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+    padding-top: 15px;
+}
+
+#start-button {
+    width: 200px;
+    height: 40px;
+    border: 1px solid #767676;
+    margin: 10px auto;
+    font-size: 18px;
+    font-family: Arial, Helvetica, sans-serif;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #a9a9a9;
+    color: #ffffff;
+    border-radius: 10px;
+}
+
+
 .grid {
-    width: 320px;
-    height: 660px;
+    width: 300px;
+    height: 600px;
     background-color: #ffe4c4;
     display: flex;
     flex-wrap: wrap;
@@ -26,8 +62,11 @@
 }
 
 .mini-grid {
-    width: 130px;
-    height: 130px;
+    position: absolute;
+    right: calc(50% - 300px);
+    top: 0px;
+    width: 120px;
+    height: 120px;
     background-color: coral;
     display: flex;
     flex-wrap: wrap;
@@ -39,4 +78,68 @@
     height: 30px;
     border: 1px solid #b8925e;
     border-radius: 7.5px;
+}
+
+@media screen and (max-width: 780px) {
+    .wrapper {
+        justify-content: flex-start;
+    }
+
+    .mobile-buttons {
+        margin-left: 10px;
+    }
+
+    .mini-grid {
+        left: 260px;
+        right: 10%;
+    }
+
+}
+
+
+@media screen and (max-width: 502px) {
+    /* .container {
+        margin-left: -30px;
+    } */
+
+    .wrapper {
+        justify-content: center;
+        scale: 0.9;
+    }
+
+    .mini-grid {
+        display: none;
+    }
+
+    .mobile-buttons {
+        margin: -25px auto 0;
+    }
+
+    #start-button {
+        margin-bottom: -30px;
+    }
+}
+
+.mobile-buttons {
+    display: flex;
+    flex-wrap: nowrap;
+    width: 300px;
+    padding: 0 25px;
+    height: 60px;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+
+.mobile-button {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: #a9a9a9;
+    color: azure;
+    font-size: 24px;
+    border: 1px solid #2b273f;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
